# flashcard_app_backend

./: main.py  prompts.py  pyproject.toml  requirements.txt  schemas.py  services.py  utils.py
